--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.kiyoshi364</groupId>
   <artifactId>github-search-repo</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>github-search-repo</name>
   <!-- FIXME change it to the project's website -->
